--- a/tpl/order.html
+++ b/tpl/order.html
@@ -1,41 +1,42 @@
 <div ng-include="'tpl/include/header.html'"></div>
 
-<ion-content class="has-header has-footer">
-  <div class="card">
+<ion-content class="has-header has-footer" >
+  <div class="card"  ng-hide="succMsg||errMsg">
     <div class="item item-divider">
       <label for="">联系人</label>
     </div>
     <div class="item-input">
-      <input type="text" placeholder="输入用户名"/>
+      <input type="text" placeholder="输入用户名 "  ng-model="order.user_name"/>
     </div>
 
     <div class="item item-divider">
       <label for="">性别</label>
     </div>
     <div class="item">
-      <input type="radio"/>先生
-      <input type="radio"/> 女士
+      <input type="radio"  value="1" ng-model="order.sex"/>先生
+      <input type="radio"  value="2" ng-model="order.sex"/> 女士
     </div>
 
     <div class="item item-divider">
       <label for="">联系电话</label>
     </div>
     <div class="item">
-        <input type="text" placeholder="请输入电话号码"/>
+        <input type="text" ng-model="order.phone" placeholder="请输入电话号码"/>
     </div>
     
     <div class="item item-divider">
       <label for="">送货地址</label>
     </div>
     <div class="item item-input">
-      <textarea name="" id="" cols="30" rows="4"></textarea>
+      <textarea  ng-model="order.addr" name="" id="" cols="30" rows="4"  ></textarea>
     </div>
   </div>
-  <div class="list list-inset">
-    <button ui-sref="myOrder" class="button button-balanced button-block">下单</button>
+  <div class="list list-inset" ng-hide="succMsg||errMsg">
+    <button  ng-click="submitOrder()" class="button button-balanced button-block">下单</button>
   </div>
 
-
+   <p class="button button-block button-balanced text-center" ng-show="succMsg">{{succMsg}}</p>
+  <p  class="button button-calm text-center" ng-show="errMsg">{{errMsg}} </p>
 </ion-content>
 
 <div ng-include="'tpl/include/footer.html'"></div>
