进一步提升用户体验（使用ionic的滚动加载ion-infinite-scroll）
<ion-infinite-scroll
immediate-check="false"
<!--阻止加载满屏的默认事件--->
ng-if="hasMore"
on-infinite="show()" >
</ion-infinite-scroll>
添加ionic的滚动事件，
几点注意：当滚动刷新后，要代码进行终止无限的刷新
$scope.$broadcast("scroll.scrollInfiniteComplete");

--- a/tpl/main.html
+++ b/tpl/main.html
@@ -23,12 +23,12 @@
 
   </div>
   <div class="list list-inset">
-    <a class="list-item button button-block button-calm" ng-click="loadMore()" ng-show="hasMore">加载更多</a>
-    <!--<ion-infinite-scroll-->
-      <!--immediate-check="false"-->
-      <!--ng-if="hasMore"-->
-      <!--on-infinite="loadMore()" >-->
-    <!--</ion-infinite-scroll>-->
+    <!--<a class="list-item button button-block button-calm" ng-click="loadMore()" ng-show="hasMore">加载更多</a>-->
+    <ion-infinite-scroll
+      immediate-check="false"
+      ng-if="hasMore"
+      on-infinite="show()" >
+    </ion-infinite-scroll>
     <a class="list-item button button-block button-assertive" ng-hide="hasMore">没有more的数据了 </a>
   </div>
 
